--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -2,10 +2,13 @@ version: '3'
 
 services:
   base: &base
-    image: chatwoot/chatwoot:latest
-    env_file: .env ## Change this file for customized env variables
+    build:
+      context: .
+      dockerfile: ./docker/Dockerfile
+    image: chatwoot:production
+    env_file: .env
     volumes:
-      - /data/storage:/app/storage
+      - storage:/app/storage
 
   rails:
     <<: *base
@@ -13,7 +16,7 @@ services:
       - postgres
       - redis
     ports:
-      - '127.0.0.1:3000:3000'
+      - '3000:3000'
     environment:
       - NODE_ENV=production
       - RAILS_ENV=production
@@ -35,17 +38,16 @@ services:
     restart: always
 
   postgres:
-    image: postgres:12
+    image: postgres:16
     restart: always
     ports:
-      - '127.0.0.1:5432:5432'
+      - '5432:5432'
     volumes:
-      - /data/postgres:/var/lib/postgresql/data
+      - postgres:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=chatwoot
-      - POSTGRES_USER=postgres
-      # Please provide your own password.
-      - POSTGRES_PASSWORD=
+      - POSTGRES_DB=${POSTGRES_DATABASE}
+      - POSTGRES_USER=${POSTGRES_USERNAME}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
 
   redis:
     image: redis:alpine
@@ -53,6 +55,11 @@ services:
     command: ["sh", "-c", "redis-server --requirepass \"$REDIS_PASSWORD\""]
     env_file: .env
     volumes:
-      - /data/redis:/data
+      - redis:/data
     ports:
-      - '127.0.0.1:6379:6379'
+      - '6379:6379'
+
+volumes:
+  postgres:
+  redis:
+  storage:
