--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -9,6 +9,7 @@ services:
     env_file: .env
     volumes:
       - storage:/app/storage
+    networks: ['net']
 
   rails:
     <<: *base
@@ -16,7 +17,7 @@ services:
       - postgres
       - redis
     ports:
-      - '3000:3000'
+      - '${RAILS_PORT}:3000'
     environment:
       - NODE_ENV=production
       - RAILS_ENV=production
@@ -24,6 +25,7 @@ services:
     entrypoint: docker/entrypoints/rails.sh
     command: ['bundle', 'exec', 'rails', 's', '-p', '3000', '-b', '0.0.0.0']
     restart: always
+    networks: ['net']
 
   sidekiq:
     <<: *base
@@ -36,18 +38,20 @@ services:
       - INSTALLATION_ENV=docker
     command: ['bundle', 'exec', 'sidekiq', '-C', 'config/sidekiq.yml']
     restart: always
+    networks: ['net']
 
   postgres:
     image: postgres:16
     restart: always
     ports:
-      - '5432:5432'
+      - '${POSTGRES_PORT}:5432'
     volumes:
       - postgres:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=${POSTGRES_DATABASE}
       - POSTGRES_USER=${POSTGRES_USERNAME}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    networks: ['net']
 
   redis:
     image: redis:alpine
@@ -57,9 +61,14 @@ services:
     volumes:
       - redis:/data
     ports:
-      - '6379:6379'
+      - '${REDIS_PORT}:6379'
+    networks: ['net']
 
 volumes:
   postgres:
   redis:
   storage:
+
+networks:
+  net:
+    external: true
