--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -2,10 +2,14 @@ version: '3'
 
 services:
   base: &base
-    image: chatwoot/chatwoot:latest
+    build:
+      context: .
+      dockerfile: ./docker/Dockerfile
+    image: chatwoot:production
     env_file: .env ## Change this file for customized env variables
     volumes:
-      - /data/storage:/app/storage
+      - storage:/app/storage
+    networks: ['net']
 
   rails:
     <<: *base
@@ -13,7 +17,7 @@ services:
       - postgres
       - redis
     ports:
-      - '127.0.0.1:3000:3000'
+      - '${RAILS_PORT}:3000'
     environment:
       - NODE_ENV=production
       - RAILS_ENV=production
@@ -21,6 +25,7 @@ services:
     entrypoint: docker/entrypoints/rails.sh
     command: ['bundle', 'exec', 'rails', 's', '-p', '3000', '-b', '0.0.0.0']
     restart: always
+    networks: ['net']
 
   sidekiq:
     <<: *base
@@ -33,19 +38,20 @@ services:
       - INSTALLATION_ENV=docker
     command: ['bundle', 'exec', 'sidekiq', '-C', 'config/sidekiq.yml']
     restart: always
+    networks: ['net']
 
   postgres:
     image: postgres:12
     restart: always
     ports:
-      - '127.0.0.1:5432:5432'
+      - '${POSTGRES_PORT}:5432'
     volumes:
-      - /data/postgres:/var/lib/postgresql/data
+      - postgres:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=chatwoot
-      - POSTGRES_USER=postgres
-      # Please provide your own password.
-      - POSTGRES_PASSWORD=
+      - POSTGRES_DB=${POSTGRES_DATABASE}
+      - POSTGRES_USER=${POSTGRES_USERNAME}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    networks: ['net']
 
   redis:
     image: redis:alpine
@@ -53,6 +59,16 @@ services:
     command: ["sh", "-c", "redis-server --requirepass \"$REDIS_PASSWORD\""]
     env_file: .env
     volumes:
-      - /data/redis:/data
+      - redis:/data
     ports:
-      - '127.0.0.1:6379:6379'
+      - '${REDIS_PORT}:6379'
+    networks: ['net'] 
+
+volumes:
+  postgres:
+  redis:
+  storage:
+
+networks:
+  net:
+    external: true
