--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ yarn-debug.log*
 # Vite uses dotenv and suggests to ignore local-only env files. See
 # https://vitejs.dev/guide/env-and-mode.html#env-files
 *.local
+.pnpm-store
