--- a/lib/filters/filter_keys.yml
+++ b/lib/filters/filter_keys.yml
@@ -122,6 +122,14 @@ conversations:
       - "not_equal_to"
       - "contains"
       - "does_not_contain"
+  identifier:
+    attribute_type: "standard"
+    data_type: "text"
+    filter_operators:
+      - "equal_to"
+      - "not_equal_to"
+      - "contains"
+      - "does_not_contain"
 
 ### ----- End of Conversation Filters ----- ###
 
